SET (LIBCOMMDB_SRC commdb.c sqlite3.c)
# SET (LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
INCLUDE_DIRECTORIES(../include/)

ADD_LIBRARY (commdb SHARED ${LIBCOMMDB_SRC})
ADD_LIBRARY (commdb_static STATIC ${LIBCOMMDB_SRC})
SET_TARGET_PROPERTIES (commdb_static PROPERTIES OUTPUT_NAME "commdb")

GET_TARGET_PROPERTY (OUTPUT_VALUE commdb_static OUTPUT_NAME)
MESSAGE (STATUS "This is the commdb_static OUTPUT_NAME: " ${OUTPUT_VALUE})

SET_TARGET_PROPERTIES (commdb_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES (commdb PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET_TARGET_PROPERTIES (commdb PROPERTIES VERSION 1.2 SOVERSION 1)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
