SET (LIBHTTP_SRC http.c)
# SET (LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
INCLUDE_DIRECTORIES(../include/)

ADD_LIBRARY (http SHARED ${LIBHTTP_SRC})
ADD_LIBRARY (http_static STATIC ${LIBHTTP_SRC})
SET_TARGET_PROPERTIES (http_static PROPERTIES OUTPUT_NAME "http")

GET_TARGET_PROPERTY (OUTPUT_VALUE http_static OUTPUT_NAME)
MESSAGE (STATUS "This is the http_static OUTPUT_NAME: " ${OUTPUT_VALUE})

SET_TARGET_PROPERTIES (http_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES (http PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET_TARGET_PROPERTIES (http PROPERTIES VERSION 1.2 SOVERSION 1)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
