SET (LIBHTTP_SRC https.c)
# SET (LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
INCLUDE_DIRECTORIES(../include/)
LINK_LIBRARIES(${PROJECT_SOURCE_DIR}/lib/libcurl.so)
ADD_LIBRARY (https SHARED ${LIBHTTP_SRC})
ADD_LIBRARY (https_static STATIC ${LIBHTTP_SRC})
SET_TARGET_PROPERTIES (https_static PROPERTIES OUTPUT_NAME "https")

GET_TARGET_PROPERTY (OUTPUT_VALUE https_static OUTPUT_NAME)
MESSAGE (STATUS "This is the https_static OUTPUT_NAME: " ${OUTPUT_VALUE})

SET_TARGET_PROPERTIES (https_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES (https PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET_TARGET_PROPERTIES (https PROPERTIES VERSION 1.0 SOVERSION 1)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
